[package]
name = "ygrpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "ygrpc"
path = "src/lib.rs"

[dependencies]
solana-sdk = "1.17"
solana-transaction-status = "1.17"

tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1.15"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.10"
log = "0.4.26"
futures = "0.3.30"
anyhow = "1.0.0"
yellowstone-grpc-client = "1.15.4"
yellowstone-grpc-proto = "1.14.2"
tonic = { version = "0.10.2", features = ["tls", "tls-webpki-roots", "tls-roots"] }
tonic-health = "0.10.2"
bs58 = "0.5.0"

